--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: demo_13
-description: codebook - theme, orientation, form focus.
+name: SongSketch
+description: An app for writing songs.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
