chord picker ok

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   intl: ^0.15.7
   share: ^0.6.1
 
+  flutter_picker:
+    git: git://github.com/yangyxd/flutter_picker.git
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
